--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
           <img class = "newappIcon" src="images/newapp-icon.png">
         </td>
         <td>
-          <h1>Hello world Updated by Mahee!</h1>
+          <h1>Hello world Updated by Mahee - LAB COMPLETED!</h1>
         </td>
       </tr>
     </table>
